# IMager

./: .gitignore  README.md  create_bot.py  main.py  pyproject.toml  setup.cfg
IMager/: imager.db
IMager/imager/: db_handler.py  image_assembly.py  parse.py
IMager_bot/: download_topic.py  manage.py  show_db_distribution.py  start.py  test_engine.py
IMager_bot/IMager/: db_handler.py  image_assembly.py  model.py  parse.py
IMager_bot/IMager/exceptions/: parse_exceptions.py
IMager_bot/IMager/imager/: config.py  db_handler.py  image_assembly.py  model.py  parse.py
IMager_bot/IMager/imager/exceptions/: parse_exceptions.py
IMager_bot/commands/: download_topic.py  show_db_distribution.py  test_engine.py  update_db.py  update_db_single.py
IMager_bot/settings/: command_exceptions.py  config.py
IMager_bot/tg_bot/: create_bot.py  tg_startup.py
IMager_bot/tg_bot/handlers/: client.py  commons.py
IMager_bot/tg_bot/keyboards/: __init__.py  client_keyboards.py
handlers/: __init__.py  client.py  commons.py
imager/: image_assembly.py
keyboards/: __init__.py  client_keyboards.py  commons_keyboard.py
parser/: parse.py  parse_exceptions.py
tg-bot/: create_bot.py
tg-bot/handlers/: __init__.py  commons.py
tg-bot/keyboards/: __init__.py  client_keyboards.py  commons_keyboard.py
